# B2C_Ecommerce

./: .dockerignore  .gitignore  Readme.md  docker-compose.yml
client/: .dockerignore  .eslintrc.json  (+7 more)
server/: Dockerfile  pyproject.toml  requirements.txt
server/api/: permissions.py  urls.py
server/api/account/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
server/api/account/migrations/: 0001_initial.py  0002_account_role.py  0003_alter_account_email.py  0004_alter_account_managers.py
server/api/account/views/: Login.py  Register.py
server/api/cart/: apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
server/api/cart/migrations/: 0001_initial.py  0002_cartitem_created_at_alter_cart_user.py  0003_alter_cartitem_cart.py  0004_alter_cartitem_quantity.py
server/api/category/: models.py  serializers.py  urls.py  views.py
server/api/category/migrations/: 0001_initial.py  0002_alter_category_options.py
server/api/order/: models.py  permisssions.py  serializers.py  services.py  urls.py  views.py
server/api/order/migrations/: 0001_initial.py  0002_alter_order_user_orderitem_delete_orderitems.py  0003_alter_orderitem_order_alter_orderitem_product.py  0004_alter_orderitem_order.py
server/api/product/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  utils.py  views.py
server/api/product/migrations/: 0001_initial.py  0002_alter_product_category_delete_category.py  (+1 more)
server/api/rating/: apps.py  models.py
server/core/: celery.py  settings.py  urls.py
(+97 files in other folders)
